# vanity-scheme

./: .gitattributes  .gitignore  CMakeLists.txt  COPYING.LESSER  COPYING.MACROS  COPYING.RUNTIME  END_OF_INDIRECTION.md  IMPLEMENTED.md  INSTALL.md  Makefile  Makefile.all  Makefile.bootstrap  Makefile.headers  Makefile.sources  OPTIMIZING_COMPILER.md  OPTIMIZING_WASM.md  README.md  WINDOWS_INSTALL_LICENSE  ack.scm  async.scm  blasphemy.scm  bootstraptest.sh  bug.scm  caselambda.scm  configure  dynamics  fiber-finals.scm  fibers.scm  fibertest.c  foo.html  foo.scm  helloworld.c  helloworld.scm  index.html  install_windows.sh  letrectest.scm  linkup  make_hellworld.sh  queuetest.c  singlethread.scm  (+2 more)
bootstrap/: cps.c  expand.c  frontend.c  getopt.c  match.c  r7rs.c  transpile.c  utils.c  vapply-linux-x64.s  variables.c  vlibrary.c  vread.c  vruntime.c
demos/: README.md  async.scm  combinator.scm  ffi.scm  patterns.scm  pi.scm  powerset.scm  yinyang.scm
docs/: intrinsics.md
manual/: transport-ephemerons.md
misc/: abi_change  binary_format  callcc  differences  dumb_idea  dynamics  exception  ffi_notes  fibers  hashtable  hotloading  io  jit  lesser_license_template  license_template  loops  marksweep  sequencing  static_let  typed_buffer
resources/: vanity.rc
runtime/: debug.c  hashtable.h  intern.c  intern_private.h  jiffy.c  r7rs.scm  vapply-linux-x64.s  vapply-linux.s  vapply-windows-amd64.S  vbytecode.c  vfiber-sysv-amd64.S  vfiber.c  vinterp.c  vlibrary.c  vport_private.h  vqueue_private.h  vread.c  vruntime.c  vruntime_private.h  vsetjmp_private.h  wacky.c  wacky_private.h
scripts/: gdb.py
src/: cps.scm  expand.scm  ffi.l  ffi.scm  ffi.y  ffi_lex.l  ffi_parse.y  frontend.scm  getopt.scm  license_template  match.scm  transpile.scm  utils.scm  variables.scm  vdecl.scm  wacky.c
test/: ack.scm  begin.scm  bug.scm  callcc.scm  callvalues.scm  caselambda.scm  cond-expand.scm  core.scm  (+34 more)
(+158 files in other folders)
